--- a/reference.bib
+++ b/reference.bib
@@ -91,14 +91,14 @@
   author    = {Andersen, Vedrana and Desbrun, Mathieu and B{\ae}rentzen, J. Andreas and Aan{\ae}s, Henrik},
   title     = {Height and tilt geometric texture},
   booktitle = {Proc. of the 5th International Symposium on Advances in Visual Computing: Part I},
-  year      = {2009},
+  year      = {2009}
 }
 
 @inproceedings{Ankerst1999,
   author    = {Ankerst, Mihael and Kastenm{\"u}ller, Gabiand Kriegel, Hans-Peter and Seidl, Thomas},
   booktitle = {Advances in Spatial Databases},
   title     = {{3D} shape histograms for similarity search and classification in spatial databases},
-  year      = {1999},
+  year      = {1999}
 }
 
 @inproceedings{Aoki2019,
@@ -569,6 +569,13 @@
 }
 
 
+@inproceedings{Chibane2020,
+  title     = {Implicit functions in feature space for 3d shape reconstruction and completion},
+  author    = {Chibane, Julian and Alldieck, Thiemo and Pons-Moll, Gerard},
+  booktitle = CVPR,
+  year      = {2020}
+}
+
 @article{Cho2014,
   author  = {Cho, Hojin and Lee, Hyunjoon and Kang, Henry and Lee, Seungyong},
   title   = {Bilateral texture filtering},
@@ -774,6 +781,7 @@
   year    = {2018}
 }
 
+
 @article{Ebke2013,
   author  = {Ebke, Hans-Christian and Bommes, David and Campen, Marcel and Kobbelt, Leif},
   title   = {{QEx}: robust quad mesh extraction},
@@ -793,7 +801,6 @@
   number  = {6}
 }
 
-
 @article{ElOuafdi2008,
   author  = {El Ouafdi, A.F. and Ziou, D. and Krim, H.},
   title   = {A smart stochastic approach for manifolds smoothing},
@@ -803,6 +810,7 @@
   number  = {5}
 }
 
+
 @article{Engel2021,
   title   = {Point transformer},
   author  = {Engel, Nico and Belagiannis, Vasileios and Dietmayer, Klaus},
@@ -810,7 +818,6 @@
   volume  = {9},
   year    = {2021}
 }
-
 
 @article{Erhan2010,
   author  = {Dumitru Erhan and Yoshua Bengio and Aaron Courville and Pierre-Antoine Manzagol and Pascal Vincent and Samy Bengio},
@@ -926,6 +933,7 @@
   year      = {2020}
 }
 
+
 @inproceedings{Gilmer2017,
   title     = {Neural message passing for quantum chemistry},
   author    = {Gilmer, Justin and Schoenholz, Samuel S and Riley, Patrick F and Vinyals, Oriol and Dahl, George E},
@@ -940,7 +948,6 @@
   booktitle = ECCV,
   year      = {2016}
 }
-
 
 @inproceedings{Glorot2011,
   title     = {Deep sparse rectifier neural networks},
@@ -995,6 +1002,7 @@
   year    = {2017}
 }
 
+
 @inproceedings{Graham2018,
   author    = {Benjamin Graham and Martin Engelcke and Laurens van der Maaten},
   title     = {{3D} semantic segmentation with submanifold sparse convolutional networks},
@@ -1009,7 +1017,6 @@
   booktitle = NIPS,
   year      = {2020}
 }
-
 
 @inproceedings{Gropp2020,
   title     = {Implicit geometric regularization for learning shapes},
@@ -1606,13 +1613,13 @@
   year      = {2013}
 }
 
+
 @article{Kingma2014a,
   title   = {Adam: A method for stochastic optimization},
   author  = {Kingma, Diederik P. and Ba, Jimmy},
   journal = ICLR,
   year    = {2014}
 }
-
 
 @inproceedings{Klokov2017,
   author    = {Roman Klokov and Victor Lempitsky},
@@ -1720,6 +1727,7 @@
   number  = {99}
 }
 
+
 @inproceedings{Lee2005,
   author    = {Kai-Wah Lee and Wen-Ping Wang},
   title     = {Feature-preserving mesh denoising via bilateral normal filtering},
@@ -1734,7 +1742,6 @@
   booktitle = CVPR,
   year      = {2015}
 }
-
 
 @inproceedings{Lei2020,
   title     = {Analytic Marching: An Analytic Meshing Solution from Deep Implicit Surface Networks},
@@ -1769,13 +1776,13 @@
   number  = {4}
 }
 
+
 @inproceedings{Li2016,
   author    = {Yangyan Li and Soeren Pirk and Hao Su and Charles R. Qi and Leonidas J. Guibas},
   title     = {{FPNN}: field probing neural networks for {3D} data},
   booktitle = NIPS,
   year      = {2016}
 }
-
 
 @article{Li2017,
   author  = {Li, Jun and Xu, Kai and Chaudhuri, Siddhartha and Yumer, Ersin and Zhang, Hao and Guibas, Leonidas},
@@ -1793,13 +1800,13 @@
   booktitle = NIPS,
   year      = {2018}
 }
-
 @inproceedings{Li2018a,
   author    = {Jiaxin Li and Ben M. Chen and Gim Hee Lee},
   title     = {{SO-Net}: Self-organizing network for point cloud analysis},
   booktitle = CVPR,
   year      = 2018
 }
+
 @article{Li2020,
   author  = {Xianzhi Li and Lequan Yu and Chi-Wing Fu and Daniel Cohen-Or and Pheng-Ann Heng},
   title   = {Unsupervised detection of distinctive regions on {3D} shapes},
@@ -2184,6 +2191,7 @@
   volume  = {32}
 }
 
+
 @inproceedings{Niu2018,
   author    = {Chengjie Niu and Jun Li and Kai Xu},
   title     = {{Im2Struct}: Recovering {3D} shape structure from a single {RGB} image},
@@ -2198,7 +2206,6 @@
   booktitle = ICCV,
   year      = {2015}
 }
-
 
 @inproceedings{Oechsle2019,
   title     = {Texture fields: Learning texture representations in function space},
@@ -2372,6 +2379,7 @@
   year      = {2008}
 }
 
+
 @article{Rainer2019,
   author  = {Gilles Rainer and Wenzel Jakob and Abhijeet Ghosh and Tim Weyrich},
   title   = {Neural {BTF} Compression and Interpolation},
@@ -2390,7 +2398,6 @@
   number  = 2,
   year    = 2020
 }
-
 
 @article{Ray2009,
   author  = {Ray, Nicolas and Vallet, Bruno and Alonso, Laurent and L\'{e}vy, Bruno},
@@ -2459,6 +2466,7 @@
   year      = {2015}
 }
 
+
 @inproceedings{Roufosse2019,
   author    = {Jean-Michel Roufosse and Abhishek Sharma and Maks Ovsjanikov},
   title     = {Unsupervised deep learning for structured shape matching},
@@ -2475,7 +2483,6 @@
   volume  = {20},
   issn    = {0377-0427}
 }
-
 
 @article{Roveri2018,
   author  = {Roveri, Riccardo and \"{O}ztireli, A. Cengiz and Pandele, Ioana and Gross, Markus},
@@ -2545,6 +2552,7 @@
   year      = {2016}
 }
 
+
 @article{Shao2012,
   author  = {Shao, Tianjia and Xu, Weiwei and Zhou, Kun and Wang, Jingdong and Li, Dongping and Guo, Baining},
   title   = {An Interactive Approach to Semantic Modeling of Indoor Scenes with an {RGBD} Camera},
@@ -2562,7 +2570,6 @@
   year    = {2018}
 }
 
-
 @article{Shapira2008,
   author  = {Shapira, Lior and Shamir, Ariel and Cohen-Or, Daniel},
   title   = {Consistent mesh partitioning and skeletonisation using the shape diameter function},
@@ -2572,6 +2579,7 @@
   number  = {4}
 }
 
+
 @article{Shapira2010,
   title   = {Contextual part analogies in {3D} objects},
   author  = {Shapira, Lior and Shalom, Shy and Shamir, Ariel and Cohen-Or, Daniel and Zhang, Hao},
@@ -2579,7 +2587,6 @@
   volume  = {89},
   year    = {2010}
 }
-
 
 @article{Sharf2004,
   author  = {Sharf, Andrei and Alexa, Marc and Cohen-Or, Daniel},
@@ -2629,6 +2636,7 @@
   number  = {3}
 }
 
+
 @article{Shen2012,
   author  = {Shen, Chao-Hui and Fu, Hongbo and Chen, Kang and Hu, Shi-Min},
   title   = {{Structure Recovery by Part Assembly}},
@@ -2648,7 +2656,6 @@
   number  = {3}
 }
 
-
 @article{Shi2015,
   author  = {B. Shi and S. Bai and Z. Zhou and X. Bai},
   title   = {{DeepPano}: Deep panoramic representation for {3D} shape recognition},
@@ -2656,13 +2663,13 @@
   year    = {2015}
 }
 
+
 @article{Shi2021,
   title   = {Multi-dataset Pretraining: A Unified Model for Semantic Segmentation},
   author  = {Shi, Bowen and Zhang, Xiaopeng and Xu, Haohang and Dai, Wenrui and Zou, Junni and Xiong, Hongkai and Tian, Qi},
   journal = {arXiv preprint arXiv:2106.04121},
   year    = {2021}
 }
-
 
 @article{Shoef2019,
   author  = {Shoef, Matan and Fogel, Sharon and Cohen-Or, Daniel},
@@ -2723,6 +2730,7 @@
   year    = {2018}
 }
 
+
 @inproceedings{Sitzmann2019,
   title     = {Scene representation networks: Continuous {3D}-structure-aware neural scene representations},
   author    = {Sitzmann, Vincent and Zollh{\"o}fer, Michael and Wetzstein, Gordon},
@@ -2737,7 +2745,6 @@
   booktitle = NIPS,
   year      = {2020}
 }
-
 
 @misc{Smith2017,
   author       = {Edward Smith and David Meger},
@@ -2798,6 +2805,7 @@
   year      = {2015}
 }
 
+
 @inproceedings{Su2018,
   author    = {Hang Su and Varun Jampani and Deqing Sun and Subhransu Maji and Evangelos Kalogerakis and Ming-Hsuan Yang and Jan Kautz},
   title     = {{SPLATNet}: Sparse lattice networks for point cloud processing},
@@ -2812,7 +2820,6 @@
   booktitle = ICLR,
   year      = {2020}
 }
-
 
 @article{Subr2009,
   author  = {Subr, Kartic and Soler, Cyril and Durand, Fr{\'e}do},
@@ -2867,6 +2874,7 @@
   year      = {2015}
 }
 
+
 @article{Sung2015,
   author  = {Sung, Minhyuk and Kim, Vladimir G and Angst, Roland and Guibas, Leonidas},
   title   = {Data-driven structural priors for shape completion},
@@ -2886,13 +2894,13 @@
   number  = {5}
 }
 
-
 @inproceedings{Takikawa2021,
   title     = {Neural Geometric Level of Detail: Real-time Rendering with Implicit {3D} Shapes},
   author    = {Towaki Takikawa and Joey Litalien and  Kangxue Yin and  Karsten Kreis and  Charles Loop and  Derek Nowrouzezahrai and  Alec Jacobson and  Morgan McGuire and  Sanja Fidler},
   year      = {2021},
   booktitle = CVPR
 }
+
 
 @article{Tan2019,
   title   = {{LXMERT}: Learning cross-modality encoder representations from transformers},
@@ -2908,7 +2916,6 @@
   booktitle = NIPS,
   year      = {2020}
 }
-
 
 @inproceedings{Tang2020,
   title     = {Searching efficient 3D architectures with sparse point-voxel convolution},
@@ -2933,13 +2940,13 @@
   year      = {2002}
 }
 
+
 @inproceedings{Tatarchenko2016,
   author    = {Tatarchenko, Maxim and Dosovitskiy, Alexey and Brox, Thomas},
   title     = {Multi-view {3D} models from single images with a convolutional network},
   booktitle = ECCV,
   year      = {2016}
 }
-
 
 @inproceedings{Tatarchenko2017,
   author    = {Tatarchenko, Maxim and Dosovitskiy, Alexey and Brox, Thomas},
@@ -2962,6 +2969,7 @@
   year      = 2019
 }
 
+
 @inproceedings{Tian2020,
   title     = {Contrastive multiview coding},
   author    = {Tian, Yonglong and Krishnan, Dilip and Isola, Phillip},
@@ -2976,7 +2984,6 @@
   booktitle = IROS,
   year      = {2017}
 }
-
 
 @inproceedings{Tomasi1998,
   author    = {C. Tomasi and R. Manduchi},
@@ -3208,6 +3215,7 @@
   year    = {2020}
 }
 
+
 @inproceedings{Wang2021,
   title     = {Unsupervised {3D} Learning for Shape Analysis via Multiresolution Instance Discrimination},
   author    = {Wang, Peng-Shuai and Yang, Yu-Qi and Zou, Qian-Fang and Wu, Zhirong and Liu, Yang and Tong, Xin},
@@ -3222,7 +3230,6 @@
   booktitle = {IJCAI},
   year      = {2021}
 }
-
 
 @misc{Warehouse2018,
   author = {3D Warehouse},
@@ -3318,6 +3325,7 @@
   number  = {4}
 }
 
+
 @inproceedings{Wu2019a,
   author    = {Wenxuan Wu and Zhongang Qi and Li Fuxin},
   booktitle = CVPR,
@@ -3332,7 +3340,6 @@
   journal = {arXiv preprint arXiv:2103.15808},
   year    = {2021}
 }
-
 
 @article{Xiao2021,
   title   = {Early convolutions help transformers see better},
@@ -3410,6 +3417,7 @@
   year      = {2021}
 }
 
+
 @inproceedings{Yagou2002,
   author    = {H. Yagou and Y. Ohtake and A. Belyaev},
   title     = {Mesh smoothing via mean and median filtering applied to face normals},
@@ -3425,7 +3433,6 @@
   year      = {2003},
   issn      = {1530-1052}
 }
-
 
 @inproceedings{Yan2006,
   author    = {Yan, Dong-Ming and Liu, Yang and Wang, Wenping},
@@ -3448,6 +3455,7 @@
   year    = {2020}
 }
 
+
 @article{Yang2015,
   title   = {{Go-ICP}: A globally optimal solution to {3D ICP} point-set registration},
   author  = {Yang, Jiaolong and Li, Hongdong and Campbell, Dylan and Jia, Yunde},
@@ -3465,7 +3473,6 @@
   year      = {2017}
 }
 
-
 @article{Yang2018,
   author  = {Yang, Bo and Rosa, Stefano and Markham, Andrew and Trigoni, Niki and Wen, Hongkai},
   title   = {Dense {3D} object reconstruction from a single depth view},
@@ -3480,13 +3487,13 @@
   year      = {2018}
 }
 
+
 @article{Yang2020,
   title   = {Mapping in a cycle: Sinkhorn regularized unsupervised learning for point cloud shapes},
   author  = {Yang, Lei and Liu, Wenxi and Cui, Zhiming and Chen, Nenglun and Wang, Wenping},
   journal = ECCV,
   year    = {2020}
 }
-
 
 @article{Yi2016,
   author  = {Yi, Li and Kim, Vladimir G. and Ceylan, Duygu and Shen, I-Chao and Yan, Mengyan and Su, Hao and Lu, Cewu and Huang, Qixing and Sheffer, Alla and Guibas, Leonidas},
@@ -3536,6 +3543,7 @@
   year      = {2018}
 }
 
+
 @article{Yu2004,
   author  = {Yu, Yizhou and Zhou, Kun and Xu, Dong and Shi, Xiaohan and Bao, Hujun and Guo, Baining and Shum, Heung-Yeung},
   title   = {Mesh editing with Poisson-based gradient field manipulation},
@@ -3561,7 +3569,6 @@
   year      = {2019}
 }
 
-
 @inproceedings{Yu2021,
   title     = {{Lite-HRNet}: A Lightweight High-Resolution Network},
   author    = {Yu, Changqian and Xiao, Bin and Gao, Changxin and Yuan, Lu and Zhang, Lei and Sang, Nong and Wang, Jingdong},
@@ -3575,6 +3582,7 @@
   journal = {arXiv:2111.14819},
   year    = {2021}
 }
+
 
 @inproceedings{Zaharescu2009,
   author    = {Zaharescu, A. and Boyer, E. and Varanasi, K. and Horaud, R.},
@@ -3590,7 +3598,6 @@
   booktitle = ECCV,
   year      = {2014}
 }
-
 
 @inproceedings{Zeng2017,
   title     = {{3DMatch}: Learning local geometric descriptors from {RGBD} reconstructions},
@@ -3633,6 +3640,7 @@
   number  = {7}
 }
 
+
 @article{Zhang2015a,
   author  = {Wangyu Zhang and Bailin Deng and Juyong Zhang and Sofien Bouaziz and Ligang Liu},
   title   = {Guided mesh normal filtering},
@@ -3642,7 +3650,6 @@
   issue   = {7}
 }
 
-
 @inproceedings{Zhang2016,
   author    = {Zhang, Richard and Isola, Phillip and Efros, Alexei A},
   booktitle = ECCV,
@@ -3650,13 +3657,13 @@
   year      = {2016}
 }
 
+
 @inproceedings{Zhang2018,
   author    = {Zhang, Jiahui and Zhao, Hao and Yao, Anbang and Chen, Yurong and Zhang, Li and Liao, Hongen},
   title     = {Efficient semantic scene completion network with spatial group convolution},
   booktitle = ECCV,
   year      = {2018}
 }
-
 
 @inproceedings{Zhang2019,
   title     = {Cascaded Context Pyramid for Full-Resolution {3D} Semantic Scene Completion},
@@ -3672,13 +3679,13 @@
   year      = {2019}
 }
 
+
 @inproceedings{Zhang2021,
   title     = {Self-Supervised Pretraining of {3D} Features on any Point-Cloud},
   author    = {Zhang, Zaiwei and Girdhar, Rohit and Joulin, Armand and Misra, Ishan},
   booktitle = ICCV,
   year      = {2021}
 }
-
 
 @article{Zhang2021a,
   title   = {{PVT}: Point-Voxel Transformer for {3D} Deep Learning},
@@ -3687,13 +3694,13 @@
   year    = {2021}
 }
 
+
 @inproceedings{Zhao2019,
   author    = {Zhao, Yongheng and Birdal, Tolga and Deng, Haowen and Tombari, Federico},
   booktitle = CVPR,
   title     = {{3D} point capsule networks},
   year      = {2019}
 }
-
 
 @inproceedings{Zhao2020,
   author    = {Xiangyun Zhao and Samuel Schulter and Gaurav Sharma and Yi-Hsuan Tsai and Manmohan Chandraker and Ying Wu},
