--- a/reference.bib
+++ b/reference.bib
@@ -392,7 +392,7 @@
 @inproceedings{Brock2016,
   author    = {Andrew Brock and Theodore Lim and J.M. Ritchie and Nick Weston},
   title     = {Generative and discriminative voxel modeling with convolutional neural networks},
-  booktitle = {3D deep learning workshop (NIPS)},
+  booktitle = {3D deep learning workshop (NeurIPS)},
   year      = {2016}
 }
 
